gcc/testsuite/rust/rustc/ui/resolve/resolve-label.rs
fn f() {
    'l: loop {
        fn g() {
            loop {
                break 'l; // { dg-error ".E0767." "" { target *-*-* } }
            }
        }
    }

    loop { 'w: while break 'w { } }
}

fn main() {}

